Bug 1805601 - Reclamp the visual viewport offset in APZ if the zoom changes. r=tnikkel

We already had logic for reclamping the visual viewport offset if the
composition bounds changes, but since the composition bounds is in
ParentLayer (post-zoom) coordinates, this didn't handle the case where
the zoom changes.

Differential Revision: https://phabricator.services.mozilla.com/D164998